- Fixed a Lua error when receiving a mail from a guildmate (DataStore_Mails).
- Fixed a Lua error when searching guild members professions. This was caused by LibTradeLinks expiry after a patch.
- Updated LibTradeLinks to the most recent version.
- Slightly modified the way calendar events are managed, in order to prevent a wall of text when multiple alchemy transmutes expire simultaneously.


3.2.001c (14/08/2009)

- Moved mail expiry check back in OnEnable()
- Fixed 2 Lua errors when doing a search.
- Fixed a minor bug when viewing guild bank tabs on an unguilded alt.
- Fixed invalid counters when taking an attachment (DataStore_Mails).
- [frFR] Fixed an error when viewing certain talent trees (DataStore_Talents).
- Fixed a lua error when visiting the AH (DataStore_Auctions).
- [deDE] Fixed a lua error when scanning skills (DataStore_Skills).
- Fixed sorting alts by rest XP rate.


3.2.001b (11/08/2009)

- Fixed a Lua error in the quest log (DataStore_Quests).
- Fixed the option that scans the body of a mail or not (DataStore_Mails)
- Removed debug code when mousing over a talent.
- Gathered Ace & LPT libraries used by DataStore_* modules under DataStore (thanks AnrDaemon).
- Removed Ace libraries already provided by DataStore
- Fixed localization issues.

3.2.001 (10/08/2009)

YOU MUST DELETE your altoholic.lua in SavedVariables before using this version!

As of this version, Altoholic will be using the DataStore series of addons.
These small addons are responsible for scanning, storing and providing data to client addons.
Although I wrote them, they must be seen as independent projects which will offer numerous benefits, such as:

- Other client addons can use them, in order to save memory and processing time.
- Data is scanned and stored only once.
- Each module has its own saved variables file (DataStore_Containers, DataStore_Crafts, etc..), so a change in one DB will not impact the other.